[project]
name = "accela"
version = "0.4.1"
description = "Accela SDK"
readme = "README.md"
authors = [
    { name = "Adam Walsh", email = "adam@walsh.me" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
